<resources>
    <string name="app_name">SDCProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="cont">Continue with SDC</string>
    <string name="Google">Continue with Google</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="email">Email address</string>
    <string name="name">Name</string>
    <string name="confmpass">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="gettingStated">Get Started with SDC</string>
    <string name="quote">...Coding with insight</string>

</resources>
